--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server.port: 7001
 server.error.include-message: always
 
+spring.data.mongodb:
+  host: localhost
+  port: 27017
+  database: product-db
+
 logging:
   level:
     root: INFO
@@ -10,3 +15,5 @@ logging:
 
 spring.config.activate.on-profile: docker
 server.port: 8080
+
+spring.data.mongodb.host: mongodb
