--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+spring.application.name: product-service
+
+
 server.port: 7001
 server.error.include-message: always
 
@@ -44,6 +47,22 @@ logging:
     root: INFO
     se.example: DEBUG
 
+
+app.eureka-server: localhost
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://${app.eureka-server}:8761/eureka/
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 5
+
+management.endpoint.health.show-details: "ALWAYS"
+management.endpoints.web.exposure.include: "*"
+
 ---
 
 spring.config.activate.on-profile: docker
@@ -51,3 +70,5 @@ server.port: 8080
 spring.cloud.stream.kafka.binder.brokers: broker
 spring.data.mongodb.host: mongodb
 #spring.rabbitmq.host: rabbitmq
+
+app.eureka-server: eureka
